--- a/src/main/resources/templates/meal/list.html
+++ b/src/main/resources/templates/meal/list.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div class=" container mx-2 my-4 " >
+  <div class=" container-fluid mx-2 my-4 " >
     <div style="background-color: rgb(25, 28, 34);" class=" text-center jumbotron p-2 ">
       <h1 class="display-4">Meal Page</h1>
     </div>
