--- a/src/main/resources/templates/person/list.html
+++ b/src/main/resources/templates/person/list.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div class=" container mx-2 my-4 " >
+  <div class=" container-fluid mx-2 my-4 " >
     <div style="background-color: rgb(25, 28, 34);" class=" text-center jumbotron p-2 ">
       <h1 class="display-4">User Page</h1>
     </div>
@@ -35,6 +35,7 @@
       
 <hr class="my-5">
 <div>
+  <h2 class="h2 text-center">Add Meal to Person Meal List</h2>
   <form  action="/person/add" method="get"> 
    <input class="input m-2" name="pid" type="text" placeholder="Person ID">
    <input class="input m-2" name="mid" type="text" placeholder="Meal ID">
